Fixed horizontal scrollbar upon adding new ingredients.

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,7 +2,8 @@
   width: 80%;
   margin: auto;
   height: 250px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
